--- a/style/user.css
+++ b/style/user.css
@@ -22,8 +22,6 @@ h1 {
      display:flex;
      width: 210px;
      height: 100%;
-     align-items: center!important;
-     justify-content: center!important;
      display:block;
      margin:auto;
  }
@@ -39,8 +37,8 @@ h1 {
   border-radius: 50px 50px 50px 50px;
   background-color: #0E172C; 
   color: white;
-  padding: 20px; 
-  width: 320px;
+  padding:15px 40px 15px 40px;
+  width: 360px;
   display: flex;
 	margin: auto;
 }
