--- a/style/details.css
+++ b/style/details.css
@@ -1,16 +1,24 @@
+.card {
+  border-color: 2px solid black;
+  /* Add shadows to create the "card" effect */
+  box-shadow: 0 4px 8px 0 rgba(167, 162, 243, 0.2);
+  width: 120px;
+  transition: 0.3s;
+}
 
- .card {
-	/* Add shadows to create the "card" effect */
-	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-	transition: 0.3s;
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-  .card:hover {
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-  }
-  
-  /* Add some padding inside the card container */
-  .container {
-	padding: 2px 16px;
-  }
+/* Add some padding inside the card container */
+.container {
+  padding: 0px 16px;
+}
+
+.Cards {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  padding: 8px;
+  grid-gap: 30px;
+  max-width: 500px;
+  margin: auto;
+  padding: 2px 16px;
+  display: flex;
+  justify-content: space-between;
+}
