--- a/style/style.css
+++ b/style/style.css
@@ -14,15 +14,18 @@ body {
 	border-radius: 25px;
 	border: 2px solid;
 	background-color: #0E172C;
-	/* Green */
 	border: none;
 	color: white;
 	padding: 15px 32px;
-	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	margin: 4px 2px;
 	cursor: pointer;
+	width: 205px;
+	max-width: 500px;
+}
+#btnCategory2{
+	margin-left: 205px;
 }
 
 footer {
